[gd_scene load_steps=7 format=2]

[ext_resource path="res://Logic/DialogBox/fonts/Cave-Story.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/MainMenu/MainMenu.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -30.0
margin_right = 58.0
margin_bottom = 30.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WindowDialog" type="Popup" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -30.0
margin_right = 58.0
margin_bottom = 30.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="SaveButton" type="Button" parent="CanvasLayer/WindowDialog"]
margin_left = 6.0
margin_top = 2.0
margin_right = 110.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Save Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAndQuitButton" type="Button" parent="CanvasLayer/WindowDialog"]
margin_left = 6.0
margin_top = 20.0
margin_right = 110.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Save and Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="CanvasLayer/WindowDialog"]
margin_left = 6.0
margin_top = 38.0
margin_right = 110.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/WindowDialog/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CanvasLayer/WindowDialog/SaveAndQuitButton" to="." method="_on_SaveAndQuitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/WindowDialog/QuitButton" to="." method="_on_QuitButton_pressed"]
